# echo

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: game.h  sdl_loop.h  vars.h
src/: game.c  main.c  sdl_loop.c
